--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@c4c/pages": ["./src/app/pages"],
       "@c4c/services": ["./src/app/services"],
       "@c4c/interfaces": ["./src/app/interfaces"],
-      "@c4c/state": ["./src/app/state"]
+      "@c4c/state": ["./src/app/state"],
+      "@c4c/ui": ["./src/app/ui"]
     }
   },
   "angularCompilerOptions": {
