--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,16 +19,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": ["ES2022", "dom"],
-    "paths": {
-      "@c4c/components": ["./src/app/components"],
-      "@c4c/pages": ["./src/app/pages"],
-      "@c4c/services": ["./src/app/services"],
-      "@c4c/interfaces": ["./src/app/interfaces"],
-      "@c4c/state": ["./src/app/state"],
-      "@c4c/ui": ["./src/app/ui"],
-      "@c4c/layout": ["./src/app/layout"]
-    }
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
