--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "useDefineForClassFields": false,
     "lib": ["ES2022", "dom"],
     "paths": {
+      "@c4c/environment": ["./src/environments/environment"],
       "@c4c/state": ["./src/app/state"],
+      "@c4c/services": ["./src/app/services"],
+      "@c4c/interfaces": ["./src/app/interfaces"],
       "@c4c/ui": ["./src/app/ui"]
     }
   },
