--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "paths": {
       "@c4c/environment": ["./src/environments/environment"],
       "@c4c/state": ["./src/app/state"],
+      "@c4c/guards": ["./src/app/guards"],
       "@c4c/services": ["./src/app/services"],
       "@c4c/interfaces": ["./src/app/interfaces"],
       "@c4c/ui": ["./src/app/ui"]
